--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "server.js",
   "repository": "*.git",
   "author": "Luca Hagel",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
