--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Luca Hagel",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0"
   }
 }
